@@ -7,6 +7,10 @@ public Manager(String name,double salary,int year,int month,int day){
     super(name, salary, year, month, day);
     bonus=0;
 }    
+public double getSalary()
+{
+double baseSalary = super.getSalary() ;
+return baseSalary + bonus;}
 public void setBonus(double bonus){
     this.bonus=bonus;
 }
@@ -16,7 +20,7 @@ public boolean equals(Object othrObject){
     return bonus==other.bonus;
 }
 public int hashCode(){
-    return super.hashCode()+17*new Double(bonus).hashCode();
+    return super.hashCode()+17* Double.valueOf(bonus).hashCode();
 }
 public String tostring(){
     return super.toString()+"[bonus="+bonus+"]";
